welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: identifier expected but 'false' found.
var vuBiscuit: Boolean == false
                          ^